<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <View
        android:id="@+id/horizontal_divider_game"
        style="@style/HorizontalDivider"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_divider_game" />

    <ImageView
        android:id="@+id/ivComputer"
        android:layout_width="80dp"
        android:layout_height="82dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:background="@color/colorPrimary"
        android:src="@drawable/paper"
        app:layout_constraintEnd_toStartOf="@+id/tvVS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <ImageView
        android:id="@+id/ivPlayer"
        android:layout_width="80dp"
        android:layout_height="82dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"
        android:src="@drawable/paper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvVS"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <TextView
        android:id="@+id/tvVS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="serif"
        android:text="@string/text_versus"
        android:textAlignment="viewStart"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/ivPlayer"
        app:layout_constraintStart_toEndOf="@+id/ivComputer"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <TextView
        android:id="@+id/tvComputer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_computer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivComputer" />

    <TextView
        android:id="@+id/tvYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:text="@string/text_you"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPlayer" />

    <ImageView
        android:id="@+id/iv_rock_option"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/rock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_paper_option"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_paper_option"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/paper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_scissors_option"
        app:layout_constraintStart_toEndOf="@id/iv_rock_option" />

    <ImageView
        android:id="@+id/iv_scissors_option"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/scissors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_paper_option" />

</androidx.constraintlayout.widget.ConstraintLayout>