<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvYouHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:text="@string/text_you"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPlayerHistory" />

    <TextView
        android:id="@+id/tvResultHistory"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvVSHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="serif"
        android:text="@string/text_versus"
        android:textAlignment="viewStart"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultHistory" />

    <ImageView
        android:id="@+id/ivPlayerHistory"
        android:layout_width="80dp"
        android:layout_height="82dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"
        android:src="@drawable/paper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvVSHistory"
        app:layout_constraintTop_toBottomOf="@+id/tvResultHistory" />

    <ImageView
        android:id="@+id/ivComputerHistory"
        android:layout_width="80dp"
        android:layout_height="82dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:background="@color/colorPrimary"
        android:src="@drawable/paper"
        app:layout_constraintEnd_toStartOf="@+id/tvVSHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultHistory" />

    <TextView
        android:id="@+id/tvComputerHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_computer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivComputerHistory" />

    <TextView
        android:id="@+id/tvDateHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultHistory" />
</androidx.constraintlayout.widget.ConstraintLayout>